--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^6.1.5",
     "@mui/x-date-pickers": "^7.22.0",
     "ag-grid-react": "^32.3.0",
+    "axios": "^1.7.7",
     "dayjs": "^1.11.13",
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
