--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,8 +18,7 @@ jobs:
       run: echo aByF4bBc#yd3Li67 | docker login -u aablotia --password-stdin
 
     - name: Build Docker Image
-      run: |
-        docker build -t aablotia/react-app:latest .
+      run: docker build -t aablotia/react-app:latest .
 
     - name: Push Docker Image to Docker Hub
       run: docker push aablotia/react-app:latest
@@ -35,7 +34,7 @@ jobs:
 
   #   - name: Deploy Docker Container
   #     env:
-  #       DOCKER_IMAGE: ${{ secrets.DOCKER_USERNAME }}/react-app:latest
+  #       DOCKER_IMAGE: aablotia/react-app:latest
   #       SSH_HOST: ${{ secrets.SSH_HOST }}
   #       SSH_USERNAME: ${{ secrets.SSH_USERNAME }}
   #     run: |
