--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,8 @@ jobs:
     steps:
       - name: Install SSH Client
         run:
-          apk update
-          apk add --no-cache openssh-client
+          apt update
+          apt add --no-cache openssh-client
           chmod 600 $ID_RSA
 
       - name: Deploy Docker Container
