--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,9 +9,6 @@ jobs:
   build:
     name: Build and Push Docker Image
     runs-on: ubuntu-latest
-
-
-
     steps:
     - name: Checkout Code
       uses: actions/checkout@v3
@@ -29,10 +26,9 @@ jobs:
     name: Deploy to Server
     runs-on: ubuntu-latest
     needs: build
-
     steps:
       - name: Install SSH Client
-        run:
+        run: |
           apt update
           apt add --no-cache openssh-client
           chmod 600 $ID_RSA
