--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
 
   deploy:
     name: Deploy to Server
-    runs-on: alpine:latest
+    runs-on: ubuntu-latest
     needs: build
     steps:
       - name: Install SSH Client
@@ -38,8 +38,8 @@ jobs:
             p2oh1NwEmZOMTAIr9Ud4AAAAF2FhYmxvdGlhQExlbm92b1RoaW5rcGFkAQIDBAUG
             -----END OPENSSH PRIVATE KEY-----
         run: |
-          apk update
-          apk add --no-cache openssh-client
+          sudo apt update
+          sudo apt install -y openssh-client
           chmod 600 $ID_RSA
 
       - name: Deploy Docker Container
