--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -42,22 +42,16 @@ jobs:
             p2oh1NwEmZOMTAIr9Ud4AAAAF2FhYmxvdGlhQExlbm92b1RoaW5rcGFkAQIDBAUG
             -----END OPENSSH PRIVATE KEY-----
 
-        run:
-          echo "Connecting to Debian Server via SSH ....................................................."
-          echo "server address=${DEBIAN_SERVER}
-          echo "server username=${DEBIAN_SERVER_USERNAME}"
-          head -n 5 $ID_RSA
-          echo "server key=${ID_RSA}"
-          
-          echo "Pulling docker image from Dockerhub ....................................................."
+        run: |
+          echo "Pulling docker image  react-app from Dockerhub ....................................................."
           ssh -i $ID_RSA -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker pull ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:latest"
           
-          echo "Stopping application infohub in docker container ....................................................."
+          echo "Stopping application react-app in docker container ....................................................."
           ssh -i $ID_RSA -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker stop react-app || true"
           ssh -i $ID_RSA -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker rm react-app || true"
 
           echo "Running application in docker container ....................................................."
-          ssh -i $ID_RSA -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker run -d --network="host" --name react-app ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:latest"
+          ssh -i $ID_RSA -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER 'docker run -d --network="host" --name react-app ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:latest'
 
 
 
