github pipeline test 25

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
-name: CI/CD Pipeline
-
+name: Deployment to dev, test and qa
 on:
+  push:
+    branches:
+      - test
   workflow_dispatch:
 
 jobs:
