--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,24 +1,21 @@
-name: Deployment to dev, test and qa
+name: Deployment to DEV
 on:
   push:
     branches:
-      - test
+      - dev
 jobs:
   build:
-    name: Build and Push Docker Image
+    name: build
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout Code
-      uses: actions/checkout@v3
+      - name: Checkout Code
+        uses: actions/checkout@v3
 
-    - name: Log in to Docker Hub
-      run: echo aByF4bBc#yd3Li67 | docker login -u aablotia --password-stdin
+      - name: Install Dependencies
+        run: npm install
 
-    - name: Build Docker Image
-      run: docker build -t aablotia/react-app:latest .
-
-    - name: Push Docker Image to Docker Hub
-      run: docker push aablotia/react-app:latest
+      - name: Build Project
+        run: npm run build
 
   run_tests:
     name: run tests
@@ -28,8 +25,6 @@ jobs:
       - name: Sleep for 3 seconds
         run: sleep 3
 
-
-
   sonarqube:
     name: sonarqube
     runs-on: ubuntu-latest
@@ -37,6 +32,31 @@ jobs:
     steps:
       - name: Sleep for 3 seconds
         run: sleep 3
+
+  upload_to_artifactory:
+    name: upload_to_artifactory
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Sleep for 3 seconds
+        run: sleep 3
+
+  build_docker_image_and_push:
+    name: Build Docker Image and Push to Docker Hub
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Log in to Docker Hub
+        run: echo aByF4bBc#yd3Li67 | docker login -u aablotia --password-stdin
+
+      - name: Build Docker Image
+        run: docker build -t aablotia/react-app:latest .
+
+      - name: Push Docker Image to Docker Hub
+        run: docker push aablotia/react-app:latest
 
   deploy-DEV:
     name: Deploy to Server - DEV
@@ -71,22 +91,3 @@ jobs:
           echo "Running application in docker container ....................................................."
           ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker run -d -p 3000:80 --name react-app ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:latest"
 
-  
-  
-
-
-  deploy-TEST:
-    name: Deploy to Server - TEST
-    runs-on: ubuntu-latest
-    needs: deploy-DEV
-    steps:
-      - name: Sleep for 3 seconds
-        run: sleep 3
-
-  deploy-QA:
-    name: Deploy to Server - QA
-    runs-on: ubuntu-latest
-    needs: deploy-TEST
-    steps:
-      - name: Sleep for 3 seconds
-        run: sleep 3
