--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,7 +44,7 @@ jobs:
   build_docker_image_and_push:
     name: Build Docker Image and Push to Docker Hub
     runs-on: ubuntu-latest
-    needs: build
+    needs: [run_tests, sonarqube, upload_to_artifactory]
     steps:
       - name: Checkout Code
         uses: actions/checkout@v3
