--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,7 +61,7 @@ jobs:
   deploy-DEV:
     name: Deploy to Server - DEV
     runs-on: ubuntu-latest
-    needs: run_tests
+    needs: build_docker_image_and_push
     steps:
       - name: Deploy Docker Container
         env:
