--- a/.github/workflows/deployToTest.yml
+++ b/.github/workflows/deployToTest.yml
@@ -3,33 +3,22 @@ name: 2 - Deployment to TEST
 on:
   workflow_dispatch:
     inputs:
-      logLevel:
-        description: 'Log level'
+      artifact_version:
+        description: 'Container version to deploy'
         required: true
-        default: 'warning'
-        type: choice
-        options:
-          - info
-          - warning
-          - debug
-      tags:
-        description: 'Test scenario tags'
+        default: 'latest'
+      comments:
+        description: 'Optional comments'
         required: false
-        type: boolean
-      environment:
-        description: 'Environment to run tests against'
-        type: environment
-        required: true
 
 jobs:
-  log-the-inputs:
+  upload_to_artifactory:
+    name: upload_to_artifactory
     runs-on: ubuntu-latest
     steps:
-      - run: |
-          echo "Log level: $LEVEL"
-          echo "Tags: $TAGS"
-          echo "Environment: $ENVIRONMENT"
-        env:
-          LEVEL: ${{ inputs.logLevel }}
-          TAGS: ${{ inputs.tags }}
-          ENVIRONMENT: ${{ inputs.environment }}
+      - name: Sleep for 3 seconds
+        run: sleep 3
+      - name: Wait for 10 seconds
+        run: sleep 10
+      - name: Check Status
+        run: echo "Deployment to Test is successful"
