--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "product-management",
+  "proxy": "http://localhost:3001",
   "private": true,
   "version": "0.0.0",
   "type": "module",
