--- a/.github/workflows/deployToDev.yml
+++ b/.github/workflows/deployToDev.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Build Project
         run: npm run build
 
+      - name: Get Version
+        id: get_version
+        run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+
   run_tests:
     name: run tests
     runs-on: ubuntu-latest
@@ -69,18 +73,19 @@ jobs:
           DEBIAN_SERVER: 108.17.127.80
           DOCKERHUB_USERNAME: aablotia
           ARTIFACT_ID: react-app
+          VERSION: ${{ env.VERSION }}
           ID_RSA: ${{ secrets.ID_RSA }}
 
         run: |
           echo "${ID_RSA}" > id_rsa
           chmod 600 id_rsa
           echo "Pulling docker image  react-app from Dockerhub ....................................................."
-          ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker pull ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:latest"
+          ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker pull ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:${VERSION}"
           
           echo "Stopping application react-app in docker container ....................................................."
           ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker stop react-app || true"
           ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker rm react-app || true"
 
           echo "Running application in docker container ....................................................."
-          ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker run -d -p 3000:80 --name react-app ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:latest"
+          ssh -i id_rsa -o StrictHostKeyChecking=no $DEBIAN_SERVER_USERNAME@$DEBIAN_SERVER "docker run -d -p 3000:80 --name react-app ${DOCKERHUB_USERNAME}/${ARTIFACT_ID}:${VERSION}"
 
