--- a/.github/workflows/deployToDev.yml
+++ b/.github/workflows/deployToDev.yml
@@ -17,12 +17,6 @@ jobs:
       - name: Build Project
         run: npm run build
 
-      - name: Get Version
-        id: get_version
-        run: |
-          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
-          echo "VERSION=$(jq -r .version package.json)"
-
   run_tests:
     name: run tests
     runs-on: ubuntu-latest
@@ -48,7 +42,7 @@ jobs:
         run: sleep 3
 
   build_docker_image_and_push:
-    name: Build Docker Image and Push to Docker Hub
+    name: Build Docker Image and Push to DockerHub
     runs-on: ubuntu-latest
     needs: [run_tests, sonarqube, upload_to_artifactory]
     steps:
@@ -59,10 +53,9 @@ jobs:
         run: echo aByF4bBc#yd3Li67 | docker login -u aablotia --password-stdin
 
       - name: Get Version
-        id: get_version
-        run: |
-          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
-          echo "VERSION=$(jq -r .version package.json)"
+        env:
+          ARTIFACT_ID: react-app
+          VERSION: ${{ env.VERSION }}
 
       - name: Build Docker Image
         run: docker build -t aablotia/react-app:${{ env.VERSION }} .
