--- a/.github/workflows/deployToDev.yml
+++ b/.github/workflows/deployToDev.yml
@@ -17,6 +17,10 @@ jobs:
       - name: Build Project
         run: npm run build
 
+      - name: Get Version
+        id: get_version
+        run: echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+
   run_tests:
     name: run tests
     runs-on: ubuntu-latest
