--- a/.github/workflows/deployToDev.yml
+++ b/.github/workflows/deployToDev.yml
@@ -57,10 +57,13 @@ jobs:
         run: echo aByF4bBc#yd3Li67 | docker login -u aablotia --password-stdin
 
       - name: Get Version
+        id: get_version
         env:
           ARTIFACT_ID: react-app
           VERSION: ${{ env.VERSION }}
-        run: echo "VERSION=$(jq -r .version package.json)"
+        run: |
+          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+          echo "VERSION=$(jq -r .version package.json)"
 
       - name: Build Docker Image
         run: docker build -t aablotia/react-app:${{ env.VERSION }} .
