--- a/.github/workflows/deployToDev.yml
+++ b/.github/workflows/deployToDev.yml
@@ -77,6 +77,15 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_docker_image_and_push
     steps:
+      - name: Checkout Code
+        uses: actions/checkout@v3
+
+      - name: Get Version
+        id: get_version
+        run: |
+          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+          echo "VERSION=$(jq -r .version package.json)"  
+
       - name: Deploy Docker Container
         env:
           DEBIAN_SERVER_USERNAME: aablotia
@@ -87,8 +96,6 @@ jobs:
           ID_RSA: ${{ secrets.ID_RSA }}
 
         run: |
-          echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
-          echo "VERSION=$(jq -r .version package.json)"
           echo "${ID_RSA}" > id_rsa
           chmod 600 id_rsa
           echo "Pulling docker image  react-app from Dockerhub ....................................................."
