--- a/.github/workflows/deployToDev.yml
+++ b/.github/workflows/deployToDev.yml
@@ -56,20 +56,20 @@ jobs:
       - name: Log in to Docker Hub
         run: echo aByF4bBc#yd3Li67 | docker login -u aablotia --password-stdin
 
-      - name: Get Version
-        id: get_version
-        env:
-          ARTIFACT_ID: react-app
-          VERSION: ${{ env.VERSION }}
+      - name: Get Version and App Name
+        id: get_version_and_app_name
         run: |
           echo "VERSION=$(jq -r .version package.json)" >> $GITHUB_ENV
+          echo "APP_NAME=$(jq -r .name package.json)" >> $GITHUB_ENV
           echo "VERSION=$(jq -r .version package.json)"
+          echo "APP_NAME=$(jq -r .name package.json)"
 
       - name: Build Docker Image
-        run: docker build -t aablotia/react-app:${{ env.VERSION }} .
+        run: docker build -t aablotia/${{ env.APP_NAME }}:${{ env.VERSION }} .
 
       - name: Push Docker Image to Docker Hub
-        run: docker push aablotia/react-app:${{ env.VERSION }}
+        run: docker push aablotia/${{ env.APP_NAME }}:${{ env.VERSION }}
+
 
 
   deploy-DEV:
