--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.54.2",
     "react-modal": "^3.16.1",
     "react-native-logs": "^5.3.0",
     "react-router-dom": "^6.27.0"
